--- a/R/01_regressions.Rmd
+++ b/R/01_regressions.Rmd
@@ -46,13 +46,6 @@ library(ggfortify)
 data <- read_rds('../../temp/data_reg.rds')
 ```
 
-```{r}
-data %>% head()
-```
-```{r}
-data %>% glimpse()
-```
-
 
 # Regression data prep
 
@@ -63,11 +56,22 @@ data %>% glimpse()
 data %<>%
   distinct(AID, year, .keep_all = TRUE) %>%
   arrange(AID, year) %>%
-  relocate(AID, year, switcher, transition, transited_t, seniority_all) %>%
-  select(-aff_id, -aff_type)
+  relocate(AID, year, type, transition, transited_t, seniority) 
 ```
 
-# Lagged variables
+```{r}
+# NA replacement again just to be sure
+data %<>%
+  replace_na(list(transition = 0, DL = 0,
+                  deg_cen = 0, deg_cen_comp = 0,
+                  paper_n = 0, author_mean = 0, citation_n = 0, oa_mean = 0, novelty_mean = 0,
+                  citation_fw = 0, novelty_fw = 0, aff_citation_fw = 0, aff_novelty_fw = 0,
+                  concepts = 'unknown')
+             )
+```
+
+
+## Lagged variables
 
 ```{r}
 # Decide what to lag
@@ -78,30 +82,29 @@ data %<>%
              DL,
              paper_n, 
              citation_n, 
+             author_mean,
              oa_mean, 
              novelty_mean, 
              deg_cen, 
              deg_cen_comp, 
              novelty_fw, 
              citation_fw,
-             aff_citation_fw
+             aff_citation_fw,
+             aff_novelty_fw
              ), ~ lag(.x, 1))
   ) %>%
   ungroup()
 ```
 
-## last preprocessing
-
 ```{r}
 # Some last preprocessing
 data %<>%
-  drop_na() %>%
   filter(year >= 2000,
-         year <= 2021) %>%          
-  group_by(AID) %>%
-  mutate(t = 1:n()) %>%
-  ungroup() 
+         year <= 2021) %>%
+  mutate(co_author_industry = deg_cen_comp > 0)
 ```
+
+
 
 # Suvival Analysis 
 
@@ -110,17 +113,27 @@ data %<>%
 ```{r}
 ### Prepare for regression
 data_surv <- data %>%
-  mutate(year = year %>% factor(),
+  mutate(t = year - year_min + 1,
+         year %>% factor(),
          concepts = concepts %>% factor()) %>%
-  filter(transited_t <= 0) %>%
+  filter(transited_t <= 1 | year == year_max) %>%
   mutate(auth_star = citation_fw >= 0.9,
-         aff_star = aff_citation_fw >= 0.9)
+         aff_star = aff_citation_fw >= 0.9) 
+```
+
+```{r}
+data_surv %>% skimr::skim()
 ```
 
 ```{r}
 # Surf object
 surv_object <- Surv(time = data_surv$t, event = data_surv$transition)
 ```
+
+```{r}
+table(surv_object)
+```
+
 
 
 ## Kaplan-Meier Method and Log Rank Test
@@ -154,35 +167,30 @@ rm(fit_km0, fit_km1, fit_km2, fit_km3,
 ## Cox Proportional Hazard Model
 
 ```{r}
-data_surv %>% glimpse()
-```
-
-
-```{r}
 ### Fit Cox proportional hazard model
 set.seed(1337)
 
 #Baseline
-fit_cox0 <- coxph(surv_object ~ seniority_all + concepts + year,
+fit_cox0 <- coxph(surv_object ~ seniority + concepts + year,
                   data = data_surv)
 
-fit_cox1 <- coxph(surv_object ~ seniority_all + concepts + year 
+fit_cox1 <- coxph(surv_object ~ seniority + concepts + year 
                   + DL,
                   data = data_surv)
 
-fit_cox2 <- coxph(surv_object ~ seniority_all + concepts + year 
+fit_cox2 <- coxph(surv_object ~ seniority + concepts + year 
                   + deg_cen + deg_cen_comp,
                   data = data_surv)
 
-fit_cox3 <- coxph(surv_object ~ seniority_all + concepts + year 
+fit_cox3 <- coxph(surv_object ~ seniority + concepts + year 
                   + citation_fw + novelty_fw,
                   data = data_surv)
 
-fit_cox4 <- coxph(surv_object ~ seniority_all + concepts + year 
+fit_cox4 <- coxph(surv_object ~ seniority + concepts + year 
                   + aff_citation_fw,
                   data = data_surv)
 
-fit_cox5 <- coxph(surv_object ~ seniority_all + concepts + year 
+fit_cox5 <- coxph(surv_object ~ seniority + concepts + year 
                   + DL + deg_cen + deg_cen_comp + citation_fw + novelty_fw + aff_citation_fw,
                   data = data_surv)
 ```
