--- a/R/01_regressions.Rmd
+++ b/R/01_regressions.Rmd
@@ -101,7 +101,8 @@ data %<>%
 data %<>%
   filter(year >= 2000,
          year <= 2021) %>%
-  mutate(co_author_industry = deg_cen_comp > 0)
+  mutate(co_author_industry = deg_cen_comp > 0,
+         year_min = ifelse(year_min < 2000, 2000, year_min))
 ```
 
 
@@ -219,64 +220,6 @@ list(fit_cox0, fit_cox1, fit_cox2, fit_cox3, fit_cox4, fit_cox5) %>% write_rds('
 ```{r}
 rm(fit_cox0, fit_cox1, fit_cox2, fit_cox3, fit_cox4, fit_cox5)
 ```
-
-# In between: Check dropouts
-
-```{r}
-data_dropout <- data %>%
-  group_by(AID) %>%
-  mutate(dropout = year == max(year, na.rm = TRUE)) %>%
-  ungroup() %>%
-  filter(year <= 2019) %>%
-  mutate(seniority_bin = case_when(
-      seniority_all <= 5 ~ "1 early",
-      seniority_all > 5 & seniority_all <= 10 ~ "2 mid",
-      seniority_all > 10 & seniority_all <= 15 ~ "3 mid late",
-      seniority_all > 15 ~ "4 late",
-  )
-  )
-```
-
-
-```{r}
-data_dropout %>% 
-  filter(year >= 2015, year <2020) %>%
-  count(year, dropout) %>%
-  group_by(year) %>%
-  mutate(n = n / sum(n)) %>%
-  ungroup() %>%
-  mutate(year = year %>% as.character()) %>%
-  filter(dropout == TRUE) %>%
-  ggplot(aes(x = year, y = n)) +
-  geom_col()
-```
-
-
-```{r}
-n_dropout <- data_dropout %>%
-  filter(dropout == TRUE, switcher == FALSE) %>%
-  count(year, seniority_bin) %>% 
-  group_by(year) %>%
-  mutate(pct = n / sum(n)) %>%
-  ungroup()
-```
-
-```{r}
-n_dropout %>%
-  mutate(year = year %>% as.character()) %>%
-  ggplot(aes(x = year, y = n, fill = seniority_bin, col = seniority_bin)) +
-  geom_col() +
-  labs(title = 'Dropouts total')
-```
-
-```{r}
-n_dropout %>%
-  mutate(year = year %>% as.character()) %>%
-  ggplot(aes(x = year, y = pct, fill = seniority_bin, col = seniority_bin)) +
-  geom_col() +
-  labs(title = 'Dropouts total')
-```
-
 
 
 # Propensity Score matching 
